--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Лендинг Частные Дома</title>
-  <!-- Подключаем Bootstrap CSS -->
+  <title>Частные Дома</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css" >
-  <!-- Подключаем наши стили -->
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
@@ -49,7 +47,6 @@
   </div>
 </section>
 
-
 <section id="aboutus" class="bg-light py-5">
   <div class="container-fluid">
     <h2 class="text-center mb-4">О нас</h2>
@@ -88,7 +85,6 @@
     </p>
   </div>
 </section>
-
 
 <section id="houses" class="py-5">
   <div class="container-fluid">
@@ -146,39 +142,39 @@
 </section>
 
 <section id="contact">
-   <div class="container-fluid bg-dark text-muted text-center py-2">
-    <h2 class="text-center mb-4">Контакты</h2>
-    <div class="row">
-      <div class="col-md-4 text-white">
-        <h3>Свяжитесь с нами</h3>
-        <p>Наша компания готова ответить на все ваши вопросы. Пожалуйста, свяжитесь с нами по следующим контактным данным:</p>
-        <ul class="list-unstyled text-center">
-          <li>Телефон: +7 (123) 456-7890</li>
-          <li>Электронная почта: info@example.com</li>
-          <li>Адрес: ул. Пушкина, д.10, г. Ярославль, Россия</li>
-        </ul>
-      </div>
-      <div class="col-md-4 offset-md-3 text-white">
-        <h3>Оставьте нам сообщение</h3>
-        <form>
-          <div class="form-group">
-            <label for="name">Ваше имя</label>
-            <input type="text" class="form-control" id="name" placeholder="Введите ваше имя">
-          </div>
-          <div class="form-group">
-            <label for="email">Ваш email</label>
-            <input type="email" class="form-control" id="email" placeholder="Введите ваш email">
-          </div>
-          <div class="form-group">
-            <label for="message">Ваше сообщение</label>
-            <textarea class="form-control" id="message" rows="5" placeholder="Введите ваше сообщение"></textarea>
-          </div>
-          <button type="submit" class="btn btn-dark">Отправить</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
+        <div class="container-fluid bg-dark text-muted text-center py-2">
+            <h2 class="text-center mb-4">Контакты</h2>
+            <div class="row">
+                <div class="col-md-4 text-white">
+                    <h3>Свяжитесь с нами</h3>
+                    <p>Наша компания готова ответить на все ваши вопросы. Пожалуйста, свяжитесь с нами по следующим контактным данным:</p>
+                    <ul class="list-unstyled text-center">
+                        <li>Телефон: +7 (123) 456-7890</li>
+                        <li>Электронная почта: info@example.com</li>
+                        <li>Адрес: ул. Пушкина, д.10, г. Ярославль, Россия</li>
+                    </ul>
+                </div>
+                <div class="col-md-4 offset-md-3 text-white">
+                    <h3>Оставьте нам сообщение</h3>
+                    <form id="contact-form">
+                        <div class="form-group">
+                            <label for="name">Ваше имя</label>
+                            <input type="text" class="form-control" id="name" placeholder="Введите ваше имя" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Ваш email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Введите ваш email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Ваше сообщение</label>
+                            <textarea class="form-control" id="message" rows="5" placeholder="Введите ваше сообщение" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-dark">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <footer class="footer">
   <div class="bg-dark text-center text-white">
@@ -239,11 +235,18 @@
   </div>
 </div>
 
-<!-- Подключаем jQuery, Popper.js, Bootstrap JS -->
+<div id="modal-notif" class="modal-notif">
+        <div class="modal-content-notif">
+            <span class="close-button">&times;</span>
+            <p id="modal-message"></p>
+        </div>
+    </div>
+    
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script defer src="js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script src="scripts.js"></script>
 </body>
 </html>
