--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Частные Дома</a>
@@ -53,11 +52,9 @@
     <p>
       Компания "Частные Дома" - это ведущий поставщик частных домов, специализирующийся на предоставлении высококачественного жилья для отдыха и постоянного проживания. Мы стремимся сделать процесс поиска и аренды или покупки идеального дома максимально комфортным и удобным для наших клиентов.
       <br>
-      <br>
       <strong>Наша миссия</strong>
       <br>
       Мы верим, что каждый человек заслуживает уникального и уютного места для жизни и отдыха. Наша миссия - помогать людям находить идеальные дома, которые отвечают их потребностям, предпочтениям и бюджету. Мы создаем уникальные возможности для клиентов, чтобы они могли наслаждаться красотой природы, комфортом дома и свободой выбора.
-      <br>
       <br>
       <strong>Наши Ценности</strong>
       <br>
@@ -69,7 +66,6 @@
       <br>
       4. Прозрачность: Мы ценим открытость и прозрачность в отношениях с нашими клиентами. Мы всегда предоставляем полную информацию о доступных вариантах жилья, его характеристиках и стоимости, чтобы вы могли принимать взвешенные решения.
       <br>
-      <br>
       <strong>Наши Услуги</strong>
       <br>
       1. Поиск и аренда частных домов для отпуска.
@@ -79,7 +75,6 @@
       3. Консультации и помощь в выборе и оформлении жилья.
       <br>
       4. Управление и обслуживание недвижимости.
-      <br>
       <br>
       Присоединяйтесь к нам и дайте нам возможность помочь вам найти вашу мечтательную резиденцию или идеальное место для отдыха!
     </p>
@@ -96,7 +91,7 @@
           <img class="card-img-top" src="img/озеро.jpg" alt="Дом 1">
           <div class="card-body">
             <h5 class="card-title">Дом у озера</h5>
-            <p class="card-text">Прекрасный вид на озеро рядом с лесом и свежий воздух.</p>
+            <p class="card-text">Прекрасный вид на озеро рядом с лесом.</p>
              <button class="btn btn-dark" data-toggle="modal" data-target="#modal1">Подробнее</button>
           </div>
         </div>
@@ -142,39 +137,40 @@
 </section>
 
 <section id="contact">
-        <div class="container-fluid bg-dark text-muted text-center py-2">
-            <h2 class="text-center mb-4">Контакты</h2>
-            <div class="row">
-                <div class="col-md-4 text-white">
-                    <h3>Свяжитесь с нами</h3>
-                    <p>Наша компания готова ответить на все ваши вопросы. Пожалуйста, свяжитесь с нами по следующим контактным данным:</p>
-                    <ul class="list-unstyled text-center">
-                        <li>Телефон: +7 (123) 456-7890</li>
-                        <li>Электронная почта: info@example.com</li>
-                        <li>Адрес: ул. Пушкина, д.10, г. Ярославль, Россия</li>
-                    </ul>
-                </div>
-                <div class="col-md-4 offset-md-3 text-white">
-                    <h3>Оставьте нам сообщение</h3>
-                    <form id="contact-form">
-                        <div class="form-group">
-                            <label for="name">Ваше имя</label>
-                            <input type="text" class="form-control" id="name" placeholder="Введите ваше имя" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Ваш email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Введите ваш email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Ваше сообщение</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Введите ваше сообщение" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-dark">Отправить</button>
-                    </form>
-                </div>
+    <div class="container-fluid bg-dark text-muted text-center py-2">
+        <h2 class="text-center mb-4">Контакты</h2>
+        <div class="row">
+            <div class="col-md-4 text-white">
+                <h3>Свяжитесь с нами</h3>
+                <p>Наша компания готова ответить на все ваши вопросы. Пожалуйста, свяжитесь с нами по следующим контактным данным:</p>
+                <ul class="list-unstyled text-center">
+                    <li>Телефон: +7 (123) 456-7890</li>
+                    <li>Электронная почта: info@example.com</li>
+                    <li>Адрес: ул. Пушкина, д.10, г. Ярославль, Россия</li>
+                </ul>
+            </div>
+            <div class="col-md-4 offset-md-3 text-white">
+                <h3>Оставьте нам сообщение</h3>
+                <form id="contact-form">
+                    <div class="form-group">
+                        <label for="name">Ваше имя</label>
+                        <input type="text" class="form-control" id="name" placeholder="Введите ваше имя" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Ваш email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Введите ваш email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Ваше сообщение</label>
+                        <textarea class="form-control" id="message" rows="5" placeholder="Введите ваше сообщение" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-dark">Отправить</button>
+                </form>
             </div>
         </div>
-    </section>
+        <div id="notification" class="alert alert-success mt-3" role="alert"></div>
+    </div>
+</section>
 
 <footer class="footer">
   <div class="bg-dark text-center text-white">
@@ -235,14 +231,8 @@
   </div>
 </div>
 
-<div id="modal-notif" class="modal-notif">
-        <div class="modal-content-notif">
-            <span class="close-button">&times;</span>
-            <p id="modal-message"></p>
-        </div>
-    </div>
-    
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script defer src="js/bootstrap.bundle.min.js"></script>
